<resources>
    <string name="app_name">HW3.6</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tri_chocolate">Три шоколада</string>
    <string name="opisanie">Много щоколада очень много</string>
    <string name="price">15505005050</string>
    <string name="mango_marakuya">Манго маракуя</string>
    <string name="Mango">Манго манго манго тольео манго!</string>
    <string name="call">Позвонить</string>
    <string name="order">Заказать</string>
</resources>